# logic_synthesis-rs

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/scripts/: install_centos_dependencies_build.sh  install_macos_dependencies_build.sh  install_ubuntu_dependencies_build.sh
.github/workflows/: CI.yml  create_pr.yml  install.yml
de/: CMakeLists.txt  README.md
de/src/eng/: de
de/src/production/: de
tests/: abc.scr  export_env.sh
